--- a/src/u-base.vue/index.css
+++ b/src/u-base.vue/index.css
@@ -1,4 +1,3 @@
 body {
-    line-height: 20px;
-    font-size: 12px;
+    font: 12px/20px 'Helvetica Neue',Helvetica,'PingFang SC','Microsoft YaHei','Hiragino Sans GB','WenQuanYi Micro Hei',sans-serif;
 }
