--- a/src/assets/docs.css
+++ b/src/assets/docs.css
@@ -2,9 +2,19 @@ body {
     color: #345;
 }
 
+a {
+    color: #419BF9;
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 .u-article {
     margin: 0 auto;
     width: 960px;
+    margin-top: 60px;
 }
 
 .u-article > li > p {
