--- a/src/u-tab-view.vue/module.css
+++ b/src/u-tab-view.vue/module.css
@@ -4,15 +4,17 @@
 
 .head {
     background: $background-color-base;
+    border-top: 1px solid $border-color-base;
 }
 
 .item {
     position: relative;
     border-top: none;
-    margin-left: -1px;
+    margin-right: -1px;
     padding: 0 30px;
     height: 24px;
     line-height: 24px;
+    border-color: $border-color-base;
 }
 
 .item[selected] {
@@ -44,8 +46,6 @@
     background: $gray-dark;
 }
 
-.item:hover {
-    .close {
-        display: block;
-    }
+.item:hover .close {
+    display: block;
 }
