--- a/src/u-tabs.vue/module.css
+++ b/src/u-tabs.vue/module.css
@@ -1,5 +1,6 @@
 .head {
     background: $background-color-base;
+    border-top: 1px solid $border-color-base;
 }
 
 .item {
@@ -9,7 +10,7 @@
 
     border-left: 1px solid $border-color-base;
     border-right: 1px solid $border-color-base;
-    margin-left: -1px;
+    margin-right: -1px;
     height: 28px;
     line-height: 28px;
 }
