--- a/src/u-base.vue/index.css
+++ b/src/u-base.vue/index.css
@@ -1,3 +1,4 @@
 body {
     font: 12px/20px 'Helvetica Neue',Helvetica,'PingFang SC','Microsoft YaHei','Hiragino Sans GB','WenQuanYi Micro Hei',sans-serif;
+    color: $color-base;
 }
