--- a/src/u-panel.vue/module.css
+++ b/src/u-panel.vue/module.css
@@ -5,12 +5,13 @@
 .head {
     font-size: 12px;
     color: #555;
-    line-height: 30px;
-    padding: 0 16px;
+    line-height: 1;
+    padding: 8px;
+    
 }
 
 .body {
-    padding: 0 16px;
+    padding: 0 8px;
 }
 
 .foot {
