--- a/src/u-color-picker.vue/module.css
+++ b/src/u-color-picker.vue/module.css
@@ -2,7 +2,32 @@
     display: inline-block;
 }
 
-.color {
-    width: 16px;
-    height: 16px;
+.wrapper {
+    display: inline-block;
+    vertical-align: -2px;
+    margin-right: 4px;
+    width: 24px;
+    height: 12px;
+    border: 1px solid $border-color-base;
+    border-radius: 2px;
+    overflow: hidden;
 }
+
+.color {
+    margin-top: -10px;
+    margin-left: -10px;
+    height: 50px;
+    width: 50px;
+    padding: 0;
+}
+
+/*
+.color {
+    display: inline-block;
+    vertical-align: -2px;
+    margin-right: 4px;
+    width: 20px;
+    height: 12px;
+    border: 1px solid $border-color-base;
+    border-radius: 2px;
+}*/
