--- a/src/u-base.vue/base.css
+++ b/src/u-base.vue/base.css
@@ -1,6 +1,6 @@
 @import 'u-base.vue/revusion.css';
 
 body {
-    font: 12px/20px 'Helvetica Neue',Helvetica,'PingFang SC','Microsoft YaHei','Hiragino Sans GB','WenQuanYi Micro Hei',sans-serif;
+    font: 12px/20px 'PingFang SC','Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei',sans-serif;
     color: $color-base;
 }
