:arrow_up: Upgrade proto-ui.vusion@0.2.1

--- a/global.css
+++ b/global.css
@@ -1,4 +1,4 @@
-@import 'u-base.vue/global.css';
+@import 'proto-ui.vusion/src/base/global.css';
 
 $brand-primary: #419bf9;
 $border-color-base: #c5c5c5;
