--- a/src/base/index.css
+++ b/src/base/index.css
@@ -1,4 +1,4 @@
-@import 'u-base.vue/revusion.css';
+@import 'proto-ui.vusion/src/base/revusion.css';
 
 body {
     font: 12px/20px 'PingFang SC','Hiragino Sans GB','Microsoft YaHei','WenQuanYi Micro Hei',sans-serif;
