--- a/src/u-tab-view.vue/module.css
+++ b/src/u-tab-view.vue/module.css
@@ -1,4 +1,4 @@
-@import 'u-tabs.vue/module.css';
+@import 'proto-ui.vusion/src/u-tabs.vue/module.css';
 
 .head {
     background: $background-color-base;
