--- a/src/u-list-view-group.vue/module.css
+++ b/src/u-list-view-group.vue/module.css
@@ -5,7 +5,7 @@
     border-bottom: 1px solid $border-color-base;
     user-select: none;
     cursor: $cursor-pointer;
-    padding: 2px 0;
+    padding: 2px 4px;
     height: 25px;
     overflow: hidden;
 }
@@ -18,6 +18,7 @@
     position: static;
     float: left;
     display: inline-block;
+    margin-left: -4px;
     width: 20px;
     height: 20px;
     line-height: 1;
