--- a/src/u-tab-view.vue/module.css
+++ b/src/u-tab-view.vue/module.css
@@ -1,7 +1,7 @@
 @import 'proto-ui.vusion/src/u-tabs.vue/module.css';
 
 .head {
-    background: $background-color-base;
+    background: $background-color-dark;
     border-top: 1px solid $border-color-base;
     height: 26px;
     border-left: 1px solid $border-color-base;
@@ -34,6 +34,7 @@
     padding: 0 30px;
     height: 24px;
     line-height: 24px;
+    background: $background-color-base;
     border-color: $border-color-base;
 }
 
