--- a/src/u-tabs.vue/module.css
+++ b/src/u-tabs.vue/module.css
@@ -1,7 +1,7 @@
 @import 'proto-ui.vusion/src/u-tabs.vue/module.css';
 
 .head {
-    background: $background-color-base;
+    background: $background-color-dark;
     border-top: 1px solid $border-color-base;
     height: 30px;
 }
@@ -10,7 +10,7 @@
     box-sizing: border-box;
     margin: 0;
     border: none;
-
+    background: $background-color-base;
     border-left: 1px solid $border-color-base;
     border-right: 1px solid $border-color-base;
     margin-right: -1px;
