--- a/src/u-pallette.vue/module.css
+++ b/src/u-pallette.vue/module.css
@@ -1,23 +1,22 @@
-$SV_button-size: 14px;
+$sv_button-size: 10px;
 
 .root {
     display: inline-block;
     border: 1px solid $border-color-base;
     padding: 8px;
-    border: 1px solid $border-color-base;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 
-.SV {
+.sv {
     position: relative;
     overflow: hidden;
     background: #f09;
     width: 200px;
-    height: 160px;
+    height: 150px;
     border-radius: 2px;
 }
 
-.SV:before, .SV:after {
+.sv:before, .sv:after {
     content: '';
     display: block;
     position: absolute;
@@ -27,99 +26,90 @@ $SV_button-size: 14px;
     bottom: 0;
 }
 
-.SV:before {
+.sv:before {
     background: linear-gradient(to right, white, rgba(255, 255, 255, 0));
 }
 
-.SV:after {
+.sv:after {
     background: linear-gradient(to top, black, rgba(0, 0, 0, 0));
+    box-shadow: inset 0px 0px 2px rgba(0,0,0,0.5);
 }
 
-.SV_handle {
+.handle {
     position: absolute;
     z-index: 5;
-    margin-left: calc(- $SV_button-size / 2);
-    margin-top: calc(- $SV_button-size / 2);
-    width: $SV_button-size;
-    height: $SV_button-size;
+    margin-left: calc(- $sv_button-size / 2);
+    margin-top: calc(- $sv_button-size / 2);
+    width: $sv_button-size;
+    height: $sv_button-size;
     border: 1px solid white;
     border-radius: 100%;
     box-shadow: 0 0 1px rgba(0, 0, 0, .5), inset 0 0 1px rgba(0, 0, 0, .5);
 }
 
-.middle {
-    margin-top: 12px;
+.bar {
+    margin-top: 4px;
 }
 
-.color {
-    float: left;
-    margin-left: 6px;
-    width: 28px;
-    height: 28px;
-    border-radius: 100%;
-}
-
-.bars {
-    float: right;
-    margin-right: 8px;
-    width: calc(200px - 56px);
-}
-
-.H {
-    position: relative;
-    /*margin-top: 4px;*/
-    height: 10px;
-    border-radius: 2px;
-    background: linear-gradient(to right, #f00 0%, #f0f 17%, #00f 33%, #0ff 50%, #0f0 67%, #ff0 83%, #f00 100%);
-}
-
-.H_handle {
-    position: absolute;
-    margin-left: calc(- $SV_button-size / 2);
-    margin-top: -2px;
-    left: 100%;
-    width: $SV_button-size;
-    height: $SV_button-size;
-    background: white;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-    border-radius: 100%;
-}
-
-.A {
-    position: relative;
-    margin-top: 8px;
-    height: 10px;
-    border-radius: 2px;
-}
-
-.A:before {
-    content: '';
-    position: absolute;
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-image: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAUCAYAAACNiR0NAAAABGdBTUEAALGPC/xhBQAAAEVJREFUOBFjPHPmzH8GIoCJiQkjEcoYmIhRRIqaUQNJCS3sakfDEHu4kCJKVOoHGUhsjhqNFFKCH7va0TDEHi6kiFI9DAHYQQeKoGFptAAAAABJRU5ErkJggg==');
-    background-size: auto 100%;
-}
-
-.A_handle {
-    position: absolute;
-    left: 100%;
-    margin-left: calc(- $SV_button-size / 2);
-    margin-top: -2px;
-    width: $SV_button-size;
-    height: $SV_button-size;
-    background: white;
-    box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.4);
-    border-radius: 100%;
-}
-
-.input {
-    margin-top: 12px;
-    width: 100%;
+.dropper {
+    display: inline-block;
+    width: 24px;
+    height: 24px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
+    color: $gray-darker;
+    vertical-align: top;
     text-align: center;
-    border: 1px solid #ddd;
+    font-size: 14px;
+    line-height: 22px;
+    cursor: $cursor-pointer;
+}
+
+.dropper:before {
+    icon-font: url('./assets/eyedropper.svg');
+}
+
+.dropper:active {
+    background: $background-color-base;
+}
+
+.sliders {
+    display: inline-block;
+    width: 144px;
+    margin: 0 4px;
+}
+
+.sliders > * + * {
+    margin-top: 4px;
+}
+
+.result {
+    display: inline-block;
+    position: relative;
+    width: 24px;
+    height: 24px;
     border-radius: 2px;
+    box-shadow: inset 0px 0px 2px rgba(0,0,0,0.5);
+}
+
+.result:before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    background: url('../u-pallette.vue/assets/transparent.png');
+}
+
+.input[class] {
+    width: 30px;
+    margin-left: 6px;
+    padding-right: 0;
+}
+
+.input[class][role="hex"] {
+    margin-left: 0;
+    width: 56px;
 }
