:sparkles: Add <u-popover>, <u-color-picker>

--- a/src/u-color-picker.vue/module.css
+++ b/src/u-color-picker.vue/module.css
@@ -1,33 +1,19 @@
 .root {
     display: inline-block;
-}
-
-.wrapper {
-    display: inline-block;
-    vertical-align: -2px;
-    margin-right: 4px;
-    width: 24px;
-    height: 12px;
     border: 1px solid $border-color-base;
-    border-radius: 2px;
-    overflow: hidden;
+    border-radius: 3px;
+    vertical-align: -6px;
 }
 
 .color {
-    margin-top: -10px;
-    margin-left: -10px;
-    height: 50px;
-    width: 50px;
-    padding: 0;
+    display: block;
+    width: 26px;
+    height: 14px;
+    margin: 3px;
+    border-radius: 2px;
 }
 
-/*
-.color {
-    display: inline-block;
-    vertical-align: -2px;
-    margin-right: 4px;
-    width: 20px;
-    height: 12px;
-    border: 1px solid $border-color-base;
-    border-radius: 2px;
-}*/
+.pallette[class] {
+    border: none;
+}
+
