--- a/src/u-pallette.vue/module.css
+++ b/src/u-pallette.vue/module.css
@@ -2,9 +2,10 @@ $sv_button-size: 10px;
 
 .root {
     display: inline-block;
+    background: white;
     border: 1px solid $border-color-base;
     padding: 8px;
-    border-radius: 3px;
+    border-radius: 4px;
 }
 
 .sv {
@@ -57,7 +58,7 @@ $sv_button-size: 10px;
     height: 24px;
     border: 1px solid #ccc;
     border-radius: 4px;
-    box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.15);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.15);
     color: $gray-darker;
     vertical-align: top;
     text-align: center;
