--- a/src/u-collapse-item.vue/module.css
+++ b/src/u-collapse-item.vue/module.css
@@ -45,6 +45,7 @@
 .body {
     /* flex: auto; */
     overflow: auto;
+    background: white;
     border-bottom: 1px solid $border-color-base;
 }
 
