--- a/src/u-popover.vue/module.css
+++ b/src/u-popover.vue/module.css
@@ -1,6 +1,8 @@
 $triangle-size: 10px;
 
 .body {
+    top: $triangle-size !important;
+    z-index: 1050;
     display: inline-block;
     background: white;
     border: 1px solid $border-color-base;
