--- a/src/u-pallette.vue/module.css
+++ b/src/u-pallette.vue/module.css
@@ -2,7 +2,6 @@ $sv_button-size: 10px;
 
 .root {
     display: inline-block;
-    background: white;
     border: 1px solid $border-color-base;
     padding: 8px;
     border-radius: 4px;
@@ -85,7 +84,7 @@ $sv_button-size: 10px;
     margin-top: 4px;
 }
 
-.result {
+.color {
     display: inline-block;
     position: relative;
     width: 24px;
@@ -94,7 +93,7 @@ $sv_button-size: 10px;
     box-shadow: inset 0px 0px 2px rgba(0,0,0,0.5);
 }
 
-.result:before {
+.color:before {
     content: '';
     display: block;
     position: absolute;
