--- a/src/u-popover.vue/module.css
+++ b/src/u-popover.vue/module.css
@@ -1,7 +1,7 @@
 $triangle-size: 10px;
 
 .body {
-    top: $triangle-size !important;
+    /* top: $triangle-size !important; */
     z-index: 1050;
     display: inline-block;
     background: white;
